# libtorch_test

./: CMakeLists.txt  Dockerfile  build.sh  main.cpp  run.sh
example/: CMakeLists.txt
